--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="org.sca.sca.controllers.EventDetailActivity"
+             android:label="@string/app_name">
+            
+            
+        </activity>
+            
     </application>
 
 </manifest>
