--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="org.sca.sca"
     android:versionCode="1"
     android:versionName="1.0" >
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-sdk
+     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.CAMERA"/>
+<uses-feature android:name="android.hardware.camera"/>
+   
 
     <application
         android:allowBackup="true"
@@ -30,6 +34,22 @@
             
             
         </activity>
+        
+         <activity android:name="org.sca.sca.controllers.CameraActivity"
+             android:label="@string/app_name">
+            
+            
+        </activity>
+        
+         <activity android:name="org.sca.sca.controllers.GalleryActivity"
+             android:label="@string/app_name">
+            
+            
+        </activity>
+        
+         
+        
+        
             
     </application>
 
