--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,12 @@
     package="org.sca.sca"
     android:versionCode="1"
     android:versionName="1.0" >
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
@@ -16,21 +19,32 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.sca.sca.controllers.MainActivity"
-            android:label="@string/app_name" >
+            android:name="org.sca.sca.StarViewActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name="org.sca.sca.controllers.EventDetailActivity"
-             android:label="@string/app_name">
-            
-            
+        <activity
+            android:name="org.sca.sca.MainActivity"
+            android:label="@string/app_name" >
         </activity>
-            
+        <activity
+            android:name="org.sca.sca.controllers.EventDetailActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="org.sca.sca.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="org.sca.sca.LoginActivity"
+            android:label="@string/title_activity_login" >
+        </activity>
     </application>
 
 </manifest>
