--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -43,7 +43,8 @@
         </activity>
         <activity
             android:name="org.sca.sca.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
     </application>
 
