--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,11 +23,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="org.sca.sca.StarViewActivity"
-            android:label="@string/title_activity_login"
+            android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
