--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,17 +4,18 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-     <uses-sdk
+    <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.CAMERA"/>
-<uses-feature android:name="android.hardware.camera"/>
-   
 
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +28,7 @@
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -48,26 +50,22 @@
             android:label="@string/title_activity_login"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-
-         <activity android:name="org.sca.sca.controllers.CameraActivity"
-             android:label="@string/app_name">
-            
-            
+        <activity
+            android:name="org.sca.sca.controllers.CameraActivity"
+            android:label="@string/app_name" >
         </activity>
-        
-         <activity android:name="org.sca.sca.controllers.GalleryActivity"
-             android:label="@string/app_name">
-            
-            
+        <activity
+            android:name="org.sca.sca.controllers.GalleryActivity"
+            android:label="@string/app_name" >
         </activity>
-        
-         <activity android:name="org.sca.sca.controllers.PhotoBoothActivity"
-             android:label="@string/app_name">
-            
-            
+        <activity
+            android:name="org.sca.sca.controllers.PhotoBoothActivity"
+            android:label="@string/app_name" >
         </activity>
-         
-
+        <activity
+            android:name="org.sca.sca.PhotoBookActivity"
+            android:label="@string/title_activity_photo_book" >
+        </activity>
     </application>
 
 </manifest>
